// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component List empty 1`] = `
<div
  className="component-list sc-bdVaJa gSvyBK"
>
  <ul
    className="sc-bwzfXH iOBFVD"
  />
</div>
`;

exports[`Storyshots Component List multiple items 1`] = `
<div
  className="component-list sc-bdVaJa gSvyBK"
>
  <ul
    className="sc-bwzfXH iOBFVD"
  >
    <li>
      <input
        checked={false}
        className="sc-EHOje dfgQRE"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <label
        className="sc-htpNat sc-bxivhb gDktNR"
        selected={1}
      >
        foo
      </label>
      <ul
        className="sc-bwzfXH iOBFVD"
      >
        <li>
          <input
            checked={false}
            className="sc-EHOje dfgQRE"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="sc-htpNat sc-ifAKCX oATfq"
            selected={1}
          >
            bar
          </label>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component List multiple items with selection 1`] = `
<div
  className="component-list sc-bdVaJa gSvyBK"
>
  <ul
    className="sc-bwzfXH iOBFVD"
  >
    <li>
      <input
        checked={true}
        className="sc-EHOje dfgQRE"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <label
        className="sc-htpNat sc-bxivhb gAXdb"
        selected={0}
      >
        foo
      </label>
      <ul
        className="sc-bwzfXH iOBFVD"
      >
        <li>
          <input
            checked={true}
            className="sc-EHOje dfgQRE"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="sc-htpNat sc-ifAKCX cyJoFk"
            selected={0}
          >
            bar
          </label>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component List single item 1`] = `
<div
  className="component-list sc-bdVaJa gSvyBK"
>
  <ul
    className="sc-bwzfXH iOBFVD"
  >
    <li>
      <input
        checked={false}
        className="sc-EHOje dfgQRE"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <label
        className="sc-htpNat sc-bxivhb gDktNR"
        selected={1}
      >
        foo
      </label>
      <ul
        className="sc-bwzfXH iOBFVD"
      >
        <li>
          <input
            checked={false}
            className="sc-EHOje dfgQRE"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="sc-htpNat sc-ifAKCX oATfq"
            selected={1}
          >
            bar
          </label>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component List single item with selection 1`] = `
<div
  className="component-list sc-bdVaJa gSvyBK"
>
  <ul
    className="sc-bwzfXH iOBFVD"
  >
    <li>
      <input
        checked={true}
        className="sc-EHOje dfgQRE"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <label
        className="sc-htpNat sc-bxivhb gAXdb"
        selected={0}
      >
        foo
      </label>
      <ul
        className="sc-bwzfXH iOBFVD"
      >
        <li>
          <input
            checked={true}
            className="sc-EHOje dfgQRE"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="sc-htpNat sc-ifAKCX cyJoFk"
            selected={0}
          >
            bar
          </label>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Sidebar closed 1`] = `
<div
  className="sidebar sc-gzVnrw dCrXjW"
>
  <div
    className="sc-gqjmRU dgXNLS"
  >
    <span
      className="sidebar-toggle sc-VigVT iRYffN"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-list fa-w-16 fa-lg "
        data-icon="list"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M128 116V76c0-8.837 7.163-16 16-16h352c8.837 0 16 7.163 16 16v40c0 8.837-7.163 16-16 16H144c-8.837 0-16-7.163-16-16zm16 176h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zM16 144h64c8.837 0 16-7.163 16-16V64c0-8.837-7.163-16-16-16H16C7.163 48 0 55.163 0 64v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Sidebar open and empty 1`] = `
<div
  className="sidebar sc-gzVnrw dFHQZO"
>
  <div
    className="sc-gqjmRU dgXNLS"
  >
    <a
      className="sc-dnqmqq kjNnRX"
      href="/"
      onClick={[Function]}
    >
      <div
        className="title sc-iwsKbI khxTXx"
      >
        <img
          alt=""
          className="logo sc-bZQynM dODJLW"
        />
        Snoopy
      </div>
    </a>
  </div>
  <hr
    className="sc-gZMcBi cwrhUs"
  />
  <div
    className="component-list sc-bdVaJa gSvyBK"
  >
    <ul
      className="sc-bwzfXH iOBFVD"
    />
  </div>
</div>
`;

exports[`Storyshots Sidebar open with components 1`] = `
<div
  className="sidebar sc-gzVnrw dFHQZO"
>
  <div
    className="sc-gqjmRU dgXNLS"
  >
    <a
      className="sc-dnqmqq kjNnRX"
      href="/"
      onClick={[Function]}
    >
      <div
        className="title sc-iwsKbI khxTXx"
      >
        <img
          alt=""
          className="logo sc-bZQynM dODJLW"
        />
        Snoopy
      </div>
    </a>
  </div>
  <hr
    className="sc-gZMcBi cwrhUs"
  />
  <div
    className="component-list sc-bdVaJa gSvyBK"
  >
    <ul
      className="sc-bwzfXH iOBFVD"
    >
      <li>
        <input
          checked={false}
          className="sc-EHOje dfgQRE"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <label
          className="sc-htpNat sc-bxivhb gDktNR"
          selected={1}
        >
          foo
        </label>
        <ul
          className="sc-bwzfXH iOBFVD"
        >
          <li>
            <input
              checked={false}
              className="sc-EHOje dfgQRE"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="sc-htpNat sc-ifAKCX oATfq"
              selected={1}
            >
              bar
            </label>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;
